--- a/Pygame GoL.ipynb
+++ b/Pygame GoL.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "            if pygame.mouse.get_pressed()[0]:\n",
     "                pos = pygame.mouse.get_pos()\n",
-    "                cells[pos[1] // cell_size:, pos[0] // cell_size] = 1\n",
+    "                cells[pos[1] // cell_size, pos[0] // cell_size] = 1\n",
     "\n",
     "        draw_cells(screen, cells, cell_size)\n",
     "        pygame.display.update()\n",
